force-app/main/default/objects/OpportunityLineItem/fields/Accesoriales__c.field-meta.xml
<CustomField>
    <fullName>Accesoriales__c</fullName>
    <label>Accesoriales</label>
    <length>200</length>
    <type>Text</type>
</CustomField>