force-app/main/default/objects/OpportunityLineItem/fields/Account_Address_Destino__c.field-meta.xml
<CustomField>
    <fullName>Account_Address_Destino__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Address Destino</label>
    <referenceTo>Account_Address__c</referenceTo>
    <relationshipLabel>Opportunity Product (Account Address Destino)</relationshipLabel>
    <relationshipName>Opportunity_Product1</relationshipName>
    <type>Lookup</type>
</CustomField>