force-app/main/default/objects/OpportunityLineItem/fields/Account_Address_Origen__c.field-meta.xml
<CustomField>
    <fullName>Account_Address_Origen__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Address Origen</label>
    <referenceTo>Account_Address__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>