force-app/main/default/objects/OpportunityLineItem/fields/Aeropuerto_de_Salida_Arribo__c.field-meta.xml
<CustomField>
    <fullName>Aeropuerto_de_Salida_Arribo__c</fullName>
    <label>Aeropuerto de Salida/Arribo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NLU</fullName>
            </value>
            <value>
                <fullName>LHR</fullName>
            </value>
            <value>
                <fullName>JFK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>