force-app/main/default/objects/OpportunityLineItem/fields/Border__c.field-meta.xml
<CustomField>
    <fullName>Border__c</fullName>
    <label>Border</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Norte</fullName>
            </value>
            <value>
                <fullName>Sur</fullName>
            </value>
            <value>
                <fullName>Marítimas</fullName>
            </value>
            <value>
                <fullName>Interiores</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>