force-app/main/default/objects/OpportunityLineItem/fields/Buy_Price_Converted__c.field-meta.xml
<CustomField>
    <fullName>Buy_Price_Converted__c</fullName>
    <description>Colocar el costo del Buy Price con la moneda correcta</description>
    <label>Buy Price Converted</label>
    <length>200</length>
    <type>Text</type>
</CustomField>