force-app/main/default/objects/OpportunityLineItem/fields/Certificaciones__c.field-meta.xml
<CustomField>
    <fullName>Certificaciones__c</fullName>
    <label>Certificaciones</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CTPAT</fullName>
            </value>
            <value>
                <fullName>OEA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>