force-app/main/default/objects/OpportunityLineItem/fields/CP_Destino__c.field-meta.xml
<CustomField>
    <fullName>CP_Destino__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CP Destino</label>
    <referenceTo>Catalogo_SAT__c</referenceTo>
    <relationshipLabel>Opportunity Product (CP Destino)</relationshipLabel>
    <relationshipName>Opportunity_Product1</relationshipName>
    <type>Lookup</type>
</CustomField>