force-app/main/default/objects/OpportunityLineItem/fields/CP_Origen__c.field-meta.xml
<CustomField>
    <fullName>CP_Origen__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CP Origen</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Catalogo_SAT__c.Codigo_Postal__c</field>
            <operation>equals</operation>
            <valueField>Catalogo_SAT__c.Codigo_Postal__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Catalogo_SAT__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>