force-app/main/default/objects/OpportunityLineItem/fields/Customs__c.field-meta.xml
<CustomField>
    <fullName>Customs__c</fullName>
    <label>Customs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agua Prieta</fullName>
            </value>
            <value>
                <fullName>Ciudad Acuña</fullName>
            </value>
            <value>
                <fullName>Ciudad Camargo</fullName>
            </value>
            <value>
                <fullName>Ciudad Juárez</fullName>
            </value>
            <value>
                <fullName>Ciudad Miguel Alemán</fullName>
            </value>
            <value>
                <fullName>Ciudad Reynosa</fullName>
            </value>
            <value>
                <fullName>Colombia</fullName>
            </value>
            <value>
                <fullName>Matamoros</fullName>
            </value>
            <value>
                <fullName>Mexicali</fullName>
            </value>
            <value>
                <fullName>Naco</fullName>
            </value>
            <value>
                <fullName>Nogales</fullName>
            </value>
            <value>
                <fullName>Nuevo Laredo</fullName>
            </value>
            <value>
                <fullName>Ojinaga</fullName>
            </value>
            <value>
                <fullName>Piedras Negras</fullName>
            </value>
            <value>
                <fullName>Puerto Palomas</fullName>
            </value>
            <value>
                <fullName>San Luis Río Colorado</fullName>
            </value>
            <value>
                <fullName>Sonoyta</fullName>
            </value>
            <value>
                <fullName>Tecate</fullName>
            </value>
            <value>
                <fullName>Tijuana</fullName>
            </value>
            <value>
                <fullName>Ciudad Hidalgo</fullName>
            </value>
            <value>
                <fullName>Subteniente López</fullName>
            </value>
            <value>
                <fullName>Acapulco</fullName>
            </value>
            <value>
                <fullName>Altamira</fullName>
            </value>
            <value>
                <fullName>Cancún</fullName>
            </value>
            <value>
                <fullName>Ciudad del Carmen</fullName>
            </value>
            <value>
                <fullName>Coatzacoalcos</fullName>
            </value>
            <value>
                <fullName>Dos Bocas</fullName>
            </value>
            <value>
                <fullName>Ensenada</fullName>
            </value>
            <value>
                <fullName>Guaymas</fullName>
            </value>
            <value>
                <fullName>La Paz</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>