force-app/main/default/objects/OpportunityLineItem/fields/Data_Time_Negocia_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Data_Time_Negocia_Pricing__c</fullName>
    <description>Se colocara cuando el status del producto cambia a Negociación con cliente</description>
    <label>Data Time Negocia Pricing</label>
    <type>DateTime</type>
</CustomField>