force-app/main/default/objects/OpportunityLineItem/fields/Fecha_Fin_Embarque__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Fin_Embarque__c</fullName>
    <label>Fecha Fin Embarque</label>
    <type>Date</type>
</CustomField>