force-app/main/default/objects/OpportunityLineItem/fields/Fecha_Inicio_Embarque__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Inicio_Embarque__c</fullName>
    <label>Fecha Inicio Embarque</label>
    <type>Date</type>
</CustomField>