force-app/main/default/objects/OpportunityLineItem/fields/Frontera_de_cruce__c.field-meta.xml
<CustomField>
    <fullName>Frontera_de_cruce__c</fullName>
    <label>Frontera de cruce</label>
    <length>200</length>
    <type>Text</type>
</CustomField>