force-app/main/default/objects/OpportunityLineItem/fields/Hazmat__c.field-meta.xml
<CustomField>
    <fullName>Hazmat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hazmat</label>
    <type>Checkbox</type>
</CustomField>