force-app/main/default/objects/OpportunityLineItem/fields/Item_Lenght__c.field-meta.xml
<CustomField>
    <fullName>Item_Lenght__c</fullName>
    <label>Item Lenght(cm)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>