force-app/main/default/objects/OpportunityLineItem/fields/Moneda_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Moneda_Oportunidad__c</fullName>
    <formula>TEXT(CurrencyIsoCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Moneda Oportunidad</label>
    <type>Text</type>
</CustomField>