force-app/main/default/objects/OpportunityLineItem/fields/OTC_Folio__c.field-meta.xml
<CustomField>
    <fullName>OTC_Folio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Folio</label>
    <referenceTo>Customer_Quote__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>