force-app/main/default/objects/OpportunityLineItem/fields/Piezas__c.field-meta.xml
<CustomField>
    <fullName>Piezas__c</fullName>
    <label>Piezas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>