force-app/main/default/objects/OpportunityLineItem/fields/Precio_Sugerido3__c.field-meta.xml
<CustomField>
    <fullName>Precio_Sugerido3__c</fullName>
    <label>Precio Sugerido ventaNN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>