force-app/main/default/objects/OpportunityLineItem/fields/Precio_Sugerido_Venta__c.field-meta.xml
<CustomField>
    <fullName>Precio_Sugerido_Venta__c</fullName>
    <label>Precio Sugerido Venta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>