force-app/main/default/objects/OpportunityLineItem/fields/PROJ_Buy_price__c.field-meta.xml
<CustomField>
    <fullName>PROJ_Buy_price__c</fullName>
    <formula>PricebookEntry.PROJ_Buy_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buy price1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>