force-app/main/default/objects/OpportunityLineItem/fields/PROJ_Direccion_de_carga__c.field-meta.xml
<CustomField>
    <fullName>PROJ_Direccion_de_carga__c</fullName>
    <label>Dirección de carga</label>
    <type>TextArea</type>
</CustomField>