force-app/main/default/objects/OpportunityLineItem/fields/PROJ_Direccion_de_descarga__c.field-meta.xml
<CustomField>
    <fullName>PROJ_Direccion_de_descarga__c</fullName>
    <label>Dirección de descarga</label>
    <type>TextArea</type>
</CustomField>