force-app/main/default/objects/OpportunityLineItem/fields/PROJ_Especificaciones__c.field-meta.xml
<CustomField>
    <fullName>PROJ_Especificaciones__c</fullName>
    <label>Especificaciones</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>