force-app/main/default/objects/OpportunityLineItem/fields/PROJ_Frecuencia__c.field-meta.xml
<CustomField>
    <fullName>PROJ_Frecuencia__c</fullName>
    <label>Frecuencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diario</fullName>
            </value>
            <value>
                <fullName>Semanal</fullName>
            </value>
            <value>
                <fullName>Mensual</fullName>
            </value>
            <value>
                <fullName>Anual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>