force-app/main/default/objects/OpportunityLineItem/fields/PROJ_Margen_de_venta__c.field-meta.xml
<CustomField>
    <fullName>PROJ_Margen_de_venta__c</fullName>
    <formula>(( UnitPrice -  PricebookEntry.PROJ_Buy_Price__c  )/ UnitPrice )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margen de venta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>