force-app/main/default/objects/OpportunityLineItem/fields/PROJ_Modalidad__c.field-meta.xml
<CustomField>
    <fullName>PROJ_Modalidad__c</fullName>
    <label>Modalidad</label>
    <type>TextArea</type>
</CustomField>