force-app/main/default/objects/OpportunityLineItem/fields/PROJ_Peso_de_carga__c.field-meta.xml
<CustomField>
    <fullName>PROJ_Peso_de_carga__c</fullName>
    <label>Peso de carga</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>