force-app/main/default/objects/OpportunityLineItem/fields/PROJ_Tiempo_de_carga__c.field-meta.xml
<CustomField>
    <fullName>PROJ_Tiempo_de_carga__c</fullName>
    <label>Tiempo de carga (horas)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>