force-app/main/default/objects/OpportunityLineItem/fields/PROJ_Tipo_de_mercancia__c.field-meta.xml
<CustomField>
    <fullName>PROJ_Tipo_de_mercancia__c</fullName>
    <label>Tipo de mercancía</label>
    <length>255</length>
    <type>Text</type>
</CustomField>