force-app/main/default/objects/OpportunityLineItem/fields/PROJ_Unidades_por_frecuencia__c.field-meta.xml
<CustomField>
    <fullName>PROJ_Unidades_por_frecuencia__c</fullName>
    <label>Unidades por frecuencia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>