force-app/main/default/objects/OpportunityLineItem/fields/PROJPrecioSugerido__c.field-meta.xml
<CustomField>
    <fullName>PROJPrecioSugerido__c</fullName>
    <formula>PROJ_Buy_price__c*1.22</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio sugerido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>