force-app/main/default/objects/OpportunityLineItem/fields/PUERTO_DE_SALIDA_ARRIBO__c.field-meta.xml
<CustomField>
    <fullName>PUERTO_DE_SALIDA_ARRIBO__c</fullName>
    <label>Puerto de Salida/Arribo</label>
    <length>200</length>
    <type>Text</type>
</CustomField>