force-app/main/default/objects/OpportunityLineItem/fields/Razon_del_rechazo__c.field-meta.xml
<CustomField>
    <fullName>Razon_del_rechazo__c</fullName>
    <label>Razón del rechazo</label>
    <type>TextArea</type>
</CustomField>