force-app/main/default/objects/OpportunityLineItem/fields/Razon_Social_Embarcador__c.field-meta.xml
<CustomField>
    <fullName>Razon_Social_Embarcador__c</fullName>
    <label>Razón Social Embarcador</label>
    <length>200</length>
    <type>Text</type>
</CustomField>