force-app/main/default/objects/OpportunityLineItem/fields/Ruta__c.field-meta.xml
<CustomField>
    <fullName>Ruta__c</fullName>
    <formula>PricebookEntry.Product2.PROJ_Ruta__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ruta</label>
    <type>Text</type>
</CustomField>