force-app/main/default/objects/OpportunityLineItem/fields/Sales_Price_Converted__c.field-meta.xml
<CustomField>
    <fullName>Sales_Price_Converted__c</fullName>
    <description>Se coloca el costo de Sales Price en el tipo de moneda que se requiere</description>
    <label>Sales Price Converted</label>
    <length>200</length>
    <type>Text</type>
</CustomField>