force-app/main/default/objects/OpportunityLineItem/fields/Servicio_adicional__c.field-meta.xml
<CustomField>
    <fullName>Servicio_adicional__c</fullName>
    <label>Servicio adicional</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Custodio</fullName>
            </value>
            <value>
                <fullName>Permisos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>