force-app/main/default/objects/OpportunityLineItem/fields/Servicio_especial__c.field-meta.xml
<CustomField>
    <fullName>Servicio_especial__c</fullName>
    <label>Servicio especial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sobrepeso</fullName>
            </value>
            <value>
                <fullName>Sobredimensión</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>