force-app/main/default/objects/OpportunityLineItem/fields/SLA_Cotiza_Pricing__c.field-meta.xml
<CustomField>
    <fullName>SLA_Cotiza_Pricing__c</fullName>
    <label>SLA Cotiza Pricing</label>
    <length>200</length>
    <type>Text</type>
</CustomField>