force-app/main/default/objects/OpportunityLineItem/fields/SLA_Negocia_Pricing__c.field-meta.xml
<CustomField>
    <fullName>SLA_Negocia_Pricing__c</fullName>
    <description>Se colocara cuan el pricing cambie el valor del Buy Price si el estatus esta en Negociación con cliente</description>
    <label>SLA Negocia Pricing</label>
    <length>200</length>
    <type>Text</type>
</CustomField>