force-app/main/default/objects/OpportunityLineItem/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <label>Target</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>