force-app/main/default/objects/OpportunityLineItem/fields/Tipo_de_contenedor__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_contenedor__c</fullName>
    <label>Tipo de contenedor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>40</fullName>
            </value>
            <value>
                <fullName>OT</fullName>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>