force-app/main/default/objects/OpportunityLineItem/fields/Tipo_de_ruta__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_ruta__c</fullName>
    <label>Tipo de ruta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Impo</fullName>
            </value>
            <value>
                <fullName>Expo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>