force-app/main/default/objects/OpportunityLineItem/fields/Tipo_de_seguro__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_seguro__c</fullName>
    <label>Tipo de seguro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mercancia</fullName>
            </value>
            <value>
                <fullName>Contenedor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>