force-app/main/default/objects/OpportunityLineItem/fields/Tipo_de_servicio__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_servicio__c</fullName>
    <label>Tipo de servicio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Sencillo</fullName>
            </value>
            <value>
                <fullName>FTL</fullName>
            </value>
            <value>
                <fullName>LTL</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>Door to Dooor</fullName>
            </value>
            <value>
                <fullName>Door to Port</fullName>
            </value>
            <value>
                <fullName>Port to Door</fullName>
            </value>
            <value>
                <fullName>Port to Port</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>