force-app/main/default/objects/OpportunityLineItem/fields/Tipo_de_Servicio_Embarque__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Servicio_Embarque__c</fullName>
    <label>Tipo de Servicio/Embarque</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AEREO</fullName>
            </value>
            <value>
                <fullName>TERRESTRE</fullName>
            </value>
            <value>
                <fullName>MARITIMO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>