force-app/main/default/objects/OpportunityLineItem/fields/Total_Buy_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Buy_Price__c</fullName>
    <label>Total Buy Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>