force-app/main/default/objects/OpportunityLineItem/fields/Transbordo__c.field-meta.xml
<CustomField>
    <fullName>Transbordo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transbordo</label>
    <type>Checkbox</type>
</CustomField>