force-app/main/default/objects/OpportunityLineItem/fields/Unidad_de_Peso__c.field-meta.xml
<CustomField>
    <fullName>Unidad_de_Peso__c</fullName>
    <label>Unidad de Peso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kg</fullName>
            </value>
            <value>
                <fullName>Lb</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>