force-app/main/default/objects/OpportunityLineItem/fields/Volumen_Mensual__c.field-meta.xml
<CustomField>
    <fullName>Volumen_Mensual__c</fullName>
    <label>Volumen Mensual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>